# vfdlib

./: Makefile.am  README  configure.ac  vfdlib.c  vfdlib.h  vfdlib.pc.in
include/: Makefile.am
include/vfdlib/: Makefile.am
src/: Makefile.am
