## Process this file with automake to produce Makefile.in

## ------------------------------------------------------------------------
## Makefile.am (include)
## ------------------------------------------------------------------------
## Authors: Tony Cebzanov <tonyc@tonyc.org>
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## ------------------------------------------------------------------------

SUBDIRS = vfdlib
