## Process this file with automake to produce Makefile.in

## ------------------------------------------------------------------------
## Makefile.am (src)
## ------------------------------------------------------------------------
## Authors: Richard Kirby <rkirkby (at) cs.waikato.ac.nz>
## Maintainer: Tony Cebzanov <tonyc@tonyc.org>
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## ------------------------------------------------------------------------

lib_LTLIBRARIES = libvfd.la

libvfd_la_SOURCES = vfdlib.c
