## Process this file with automake to produce Makefile.in

## ------------------------------------------------------------------------
## Makefile.am (include/vfdlib)
## ------------------------------------------------------------------------
## Authors: Richard Kirby <rkirkby (at) cs.waikato.ac.nz>
## Maintainer: Tony Cebzanov <tonyc@tonyc.org>
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.225-7013
## ------------------------------------------------------------------------

pkginclude_HEADERS = vfdlib.h
pkgincludedir = $(includedir)/vfdlib
