## Process this file with automake to produce Makefile.in

## ------------------------------------------------------------------------
## Makefile.am (include/vfdlib)
## ------------------------------------------------------------------------
## Authors: Richard Kirby <rkirkby (at) cs.waikato.ac.nz>
## Maintainer: Tony Cebzanov <tonyc@tonyc.org>
## ------------------------------------------------------------------------

pkginclude_HEADERS = vfdlib.h
pkgincludedir = $(includedir)/vfdlib
